Implemented new checkstyle and other review comments.